--- a/beaulieu_hw4.ipynb
+++ b/beaulieu_hw4.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d89f88b9",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6b6b9420",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,22 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fbcd1904",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    56\n",
-       "1     0\n",
-       "2    77\n",
-       "3    33\n",
-       "4    16\n",
+       "0    99\n",
+       "1    22\n",
+       "2     5\n",
+       "3    72\n",
+       "4    71\n",
        "dtype: int32"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b7c66ea0",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,11 +159,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "dcceb242",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Some strings</th>\n",
+       "      <th>More Integers</th>\n",
+       "      <th>Strings</th>\n",
+       "      <th>Integers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>This is a string</td>\n",
+       "      <td>10</td>\n",
+       "      <td>This is a string</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>This is also a string</td>\n",
+       "      <td>25</td>\n",
+       "      <td>This is also a string</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yet another string</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Yet another string</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hey look, more strings</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Hey look, more strings</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>wow, string, wow</td>\n",
+       "      <td>20</td>\n",
+       "      <td>wow, string, wow</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Some strings  More Integers                 Strings  Integers\n",
+       "0        This is a string             10        This is a string        99\n",
+       "1   This is also a string             25   This is also a string        22\n",
+       "2      Yet another string             15      Yet another string         5\n",
+       "3  Hey look, more strings             30  Hey look, more strings        72\n",
+       "4        wow, string, wow             20        wow, string, wow        71"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_reset = data_dict.reset_index().rename(columns={\"index\":\"Some strings\",0:\"More Integers\"})\n",
+    "data_merge = pd.DataFrame({\"Strings\":string_theory,\"Integers\":rando_array})\n",
+    "df = pd.merge(data_reset, data_merge, left_index=True, right_index=True)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
